test_suite/tests/ui/float/validate/deprecated_with.stderr
error: Deprecated validator `with`. It was renamed to `predicate`
 --> tests/ui/float/validate/deprecated_with.rs:3:19
  |
3 | #[nutype(validate(with = |c| c>0))]
  |                   ^^^^
