test_suite/tests/ui/float/validate/deprecated_with.rs
use nutype::nutype;

#[nutype(validate(with = |c| c>0))]
pub struct Amount(f32);

fn main() {}
